--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ input::placeholder {
   display: flex;
   position: fixed;
   width: 328px;
-  margin-top: 390px;
+  margin-top: 360px;
   flex-direction: column-reverse;
   align-items: flex-end;
   z-index: 1;
@@ -134,11 +134,8 @@ input::placeholder {
   height: 56px;
   border-radius: 16px;
   background-color: #DA0D1E;
-  box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.15), 0px 4px 4px 0px rgba(0, 0, 0, 0.30);
-}
-
-.container-add:hover {
   cursor: pointer;
+  box-shadow: 0px 8px 12px 6px rgba(0, 0, 0, 0.15), 0px 4px 4px 0px rgba(0, 0, 0, 0.30);
 }
 
 .img-add {
@@ -207,6 +204,7 @@ input::placeholder {
   padding: 16px 0px 24px 0px;
   justify-content: space-between;
   align-items: center;
+  z-index: 15000;
 }
 
 .tit-cad {
@@ -309,7 +307,7 @@ input::placeholder {
   margin-top: 452px;
   flex-direction: column-reverse;
   align-items: flex-end;
-  z-index: 1;
+  z-index: 2;
 }
 
 .opt-spans {
@@ -367,12 +365,91 @@ input::placeholder {
 
 .modal-delete {
   display: flex;
-  width: 328px;
-  height: 240px;
+  position: fixed;
+  width: 268px;
+  height: 180px;
   padding: 24px;
+  margin-top: 40px;
+  margin-left: 6px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 16px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.30);
+  z-index: 999;
+}
+
+.tit-delete {
+  color: #DA0D1E;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: -1px;
+}
+
+.text-delete {
+  text-align: left;
+  color: #383B3D;
+  font-size: 16.5px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+.delete-buttons {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+
+}
+
+.p-del-button {
+  display: flex;
+  width: 132px;
+  height: 40px;
+  padding: 12px 24px;
+  justify-content: space-between;
+  align-items: center;
   flex-shrink: 0;
+  cursor: pointer;
+  border-radius: 100px;
+  border: none;
+  background: #DA0D1E;
+  box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.30);
+  color: var(--shape, #FFF);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 1.5px;
+  margin-left: 12px;
+}
+
+.s-del-button {
+  display: flex;
+  width: 132px;
+  height: 40px;
+  padding: 12px 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 100px;
+  border: 1px solid #DA0D1E;
+  color: var(--primary, #DA0D1E);
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 1.5px;
+  cursor: pointer;
 }
